<resources>
    <string name="app_name">Process Tracker</string>
    <string name="correo">correo</string>
    <string name="contraseña">contraseña</string>
    <string name="iniciar">iniciar</string>
    <string name="registrar">registrar</string>
    <string name="repcontraseña">Repetir contraseña</string>
    <string name="Registrarse">Registarse</string>
    <string name="miperfil">Mi perfil</string>
    <string name="cerrarses">Cerrar sesión</string>
    <string name="m2princial">Principal</string>
    <string name="m2cerrarSesion">Cerrar Sesion</string>
    <string name="facebook_app_id">116615105686437</string>
    <string name="fb_login_protocol_scheme">fb116615105686437</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_frame">MainActivity_frame</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bottom_nav_main">BottomNavMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawer__">Drawer__Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Cliente">Cliente</string>
    <string name="Pendientes">Pendientes</string>
    <string name="Chats_Activos">Chats Activos</string>
    <string name="promociones">Promociones</string>
    <string name="informacion">Informacion</string>
    <string name="lista_empleados">Empleados</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="general">Informacion General</string>
    <string name="title_activity_botton_nav">BottonNavActivity</string>
    <string name="Boton_navegador">Botton Nav</string>
    <string name="Lsita_empleados">Lista de empleados</string>
    <string name="nit">Nit</string>

</resources>
